7903384: sync jextract for jdk 20 panama API changes